# jav_subtitle_orchestrator_api

./: .env.example  .env.windows.example  .gitignore  CHANGELOG.md  README-TranslateLocally-ja-en.md  README.md  ja2en  pyproject.toml
docs/: api-client-guide.md  branch-consolidation-audit-2026-07-19.md
orchestrator/: __main__.py  api.py  audio_cleanup.py  audio_lock.py  audio_recovery.py  callbacks.py  catalog_repair.py  catalog_sync.py  catalog_sync_reconciliation.py  catalog_visibility.py  catalog_visibility_repair.py  catalog_visibility_report.py  config.py  dashboard.py  historical_batch.py  historical_english_ai_audit.py  historical_repair.py  job_files_lock.py  job_logs.py  job_snapshot.py  mac_worker.py  missav_adapter.py  models.py  movie_catalog.py  movie_code.py  paths.py  process_lock.py  store.py  subtitle_audit_api.py  subtitle_quality.py  subtitle_repair.py  subtitle_request_importer.py  supabase_publisher.py  transcription.py  translation.py  translation_only_supervisor.py  translation_smoke.py  windows_worker.py
reports/: translatelocally-runtime-evidence.json
scripts/: benchmark_transcription_coverage.py  benchmark_whisperjav_ab.py  build_consensus_transcript.py  codex_multi_translation.schema.json  codex_tags.schema.json  codex_translate_single.py  codex_translation.schema.json  download_site_audio.py  install_mac_worker_launchd.sh  run_codex_translation_batch.sh  translate_srt_translatelocally.py  translate_srts.py  translatelocally_translate_single.py
tests/: conftest.py  test_api_callbacks.py  test_api_dashboard.py  test_api_docs_guide.py  (+50 more)
(+65 files in other folders)
