[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jav-subtitle-orchestrator"
version = "0.1.0"
description = "Mac + Windows orchestration service for queued JAV subtitle generation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "requests>=2.32.0",
  "curl-cffi>=0.13.0",
  "playwright>=1.54.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]
windows = [
  "faster-whisper>=1.0.3",
  "openai>=1.0.0",
  "tqdm>=4.66.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.ruff]
line-length = 100
target-version = "py311"
